<resources>
    <string name="app_name">Android Playground</string>

    <!-- System Design Topic Titles -->
    <string name="topic_title_image_upload_app">Image Upload App</string>
    <string name="topic_title_news_feed_app">News Feed App</string>
    <string name="topic_title_login_screen">Login Screen</string>
    <string name="topic_title_analytics_sdk">Analytics SDK</string>
    <string name="topic_title_chat_app">Chat App</string>
    <string name="topic_title_stock_trading_app">Stock Trading App</string>
    <string name="topic_title_pagination_library">Pagination Library</string>
...
