...
    modifier: Modifier = Modifier,
) {
    Scaffold(
        modifier = modifier,
        topBar = {
            AppTopAppBar(
                title = "Notes",
                onNavigationClick = { onIntent(NoteListIntent.NavigateBack) },
            )
        },
        floatingActionButton = {
            FloatingActionButton(onClick = { onIntent(NoteListIntent.NavigateToAdd) }) {
                Icon(Icons.Default.Add, contentDescription = "Add Note")
...
